--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
   "devDependencies": {
     "gulp": "^3.9.0",
     "gulp-webserver": "^0.9.1"
+  },
+  "dependencies": {
+    "express": "^4.13.3",
+    "lodash": "^3.10.1",
+    "request": "^2.64.0"
   }
 }
